Move /me/ to v4

--- a/v4/index.html
+++ b/v4/index.html
@@ -4,8 +4,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>8-p.info</title>
+    <style>
+        body {
+            margin: 0 auto;
+            padding: 1rem;
+            max-width: 40rem;
+            font-family: sans-serif;
+        }
+    </style>
 </head>
 <body>
     <h1>8-p.info</h1>
+    <a href="/me/">Kazuyoshi Kato</a>
 </body>
 </html>
