Add some interesting stuff from the internet

--- a/v4/index.html
+++ b/v4/index.html
@@ -6,15 +6,24 @@
     <title>8-p.info</title>
     <style>
         body {
-            margin: 0 auto;
-            padding: 1rem;
-            max-width: 40rem;
             font-family: sans-serif;
         }
     </style>
 </head>
 <body>
     <h1>8-p.info</h1>
-    <a href="/me/">Kazuyoshi Kato</a>
+    <p>... is once again under construction.</p>
+    <p>
+        My name is <a href="/me/">Kazuyoshi Kato</a>.
+        I have a <a href="https://8-p.info/">blog</a> and
+        <a href="https://thoughts.8-p.info/">some notes</a>.
+    </p>
+    <h2>From the Internet</h2>
+    <p>
+        <a href="https://concerned.tech">Letter in Support of Responsible Fintech Policy</a>
+    </p>
+    <p>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/yTCXGAeLGHw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </p>
 </body>
 </html>
