--- a/v4/index.html
+++ b/v4/index.html
@@ -7,23 +7,47 @@
     <style>
         body {
             font-family: sans-serif;
+            line-height: 1.5;
+        }
+
+        main {
+            max-width: 40rem;
+            margin: 0 auto;
+        }
+
+        .youtube {
+            position: relative;
+            padding-bottom: 56.25%;
+        }
+
+        .youtube iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
 <body>
-    <h1>8-p.info</h1>
-    <p>... is once again under construction.</p>
-    <p>
-        My name is <a href="/me/">Kazuyoshi Kato</a>.
-        I have a <a href="https://8-p.info/">blog</a> and
-        <a href="https://thoughts.8-p.info/">some notes</a>.
-    </p>
-    <h2>From the Internet</h2>
-    <p>
-        <a href="https://concerned.tech">Letter in Support of Responsible Fintech Policy</a>
-    </p>
-    <p>
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/yTCXGAeLGHw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </p>
+    <main>
+        <h1>8-p.info</h1>
+        <p>... is once again under construction.</p>
+        <p>
+            My name is <a href="/me/">Kazuyoshi Kato</a>.
+            I have a <a href="https://8-p.info/">blog</a> and
+            <a href="https://thoughts.8-p.info/">some notes</a>.
+        </p>
+        <h2>From the Internet</h2>
+        <p>
+            <a href="https://concerned.tech">Letter in Support of Responsible Fintech Policy</a>
+        </p>
+        <p>
+            <div class="youtube">
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/yTCXGAeLGHw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <br/><a href="https://www.goodliars.com">The Good Liars</a> are good.
+        </p>    
+    </main>
 </body>
 </html>
