--- a/v4/index.html
+++ b/v4/index.html
@@ -35,7 +35,7 @@
         <p>... is once again under construction.</p>
         <p>
             My name is <a href="/me/">Kazuyoshi Kato</a>.
-            I have a <a href="https://8-p.info/">blog</a> and
+            I have a <a href="https://blog.8-p.info/">blog</a> and
             <a href="https://thoughts.8-p.info/">some notes</a>.
         </p>
         <h2>From the Internet</h2>
@@ -43,11 +43,16 @@
             <a href="https://concerned.tech">Letter in Support of Responsible Fintech Policy</a>
         </p>
         <p>
+            <a href="https://maketime.blog/article/the-distraction-free-iphone/">The Distraction-Free iPhone</a>
+        </p>
+        <p>
+            <a href="https://xkcd.com/386/">Duty Calls</a>
+        </p>
+        <p>
             <div class="youtube">
                 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/yTCXGAeLGHw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <br/><a href="https://www.goodliars.com">The Good Liars</a> are good.
-        </p>    
+        </p>
     </main>
 </body>
 </html>
