--- a/v4/me/index.html
+++ b/v4/me/index.html
@@ -32,6 +32,19 @@
             border: 1px solid #666;
             text-align: center;
         }
+
+        h4 {
+            font-weight: normal;
+        }
+
+        @media (min-width: 50rem) {
+            h4 {
+                display: flex;
+            }
+            h4 .years {
+                width: 33.3%;
+            }
+        }
 </style>
 </head>
 <body>
@@ -43,16 +56,48 @@
 
     <h2>Work Experience</h2>
     <h3>Amazon Web Services</h3>
+    <h4>
+        <div class="years">October 2021 - present</div>
+        <div class="title">Senior Software Development Engineer</div>
+    </h4>
+    <h4>
+        <div class="years">July 2019 - September 2021</div>
+        <div class="title">Software Development Engineer</div>
+    </h4>
     <h3>Amazon</h3>
+    <h4>
+        <div class="years">September 2014 - July 2019</div>
+        <div class="title">Software Development Engineer</div>
+    </h4>
     <h3>Amazon Japan</h3>
+    <h4>
+        <div class="years">July 2012 - September 2014</div>
+        <div class="title">Software Development Engineer</div>
+    </h4>
     <h3>mixi, Inc.</h3>
+    <h4>
+        <div class="years">April 2008 - July 2012</div>
+        <div class="title">Engineer</div>
+    </h4>
     <h3>National Institute of Advanced Industrial Science and Technology</h3>
+    <h4>
+        <div class="years">October 2008 - March 2008</div>
+        <div class="title">Technical Staff (Part-Time)</div>
+    </h4>
     <h3>Community Engine Inc</h3>
+    <h4>
+        <div class="years">April 2006 - December 2007</div>
+        <div class="title">Development Engineer (Part-Time)</div>
+    </h4>
 
     <h2>FAQ</h2>
     <h3 id="kazu">Kazu? Kaz? Kato?</h3>
     <p>
-        I use Kazu. Kaz is fine. It may be closer to the pronunciation.
+        Kazuyoshi seems long for non-Japanese, albeit
+        <a href="https://en.wikipedia.org/wiki/Kazuyoshi_Miura">common</a>
+        <a href="https://en.wikipedia.org/wiki/Tamori">name</a> in Japan.
+        So I often use "Kazu" instead.
+        Kaz is fine. It may be closer to the pronunciation.
         Kato is okay, but that's my family name.
     </p>
     <table class="name">
