Add where I was

--- a/v4/me/index.html
+++ b/v4/me/index.html
@@ -44,6 +44,9 @@
             h4 .years {
                 width: 33.3%;
             }
+            h4 .title {
+                flex-grow: 2;
+            }
         }
 </style>
 </head>
@@ -59,35 +62,42 @@
     <h4>
         <div class="years">October 2021 - present</div>
         <div class="title">Senior Software Development Engineer</div>
+        <div class="location">Seattle, Washington</div>
     </h4>
     <h4>
         <div class="years">July 2019 - September 2021</div>
         <div class="title">Software Development Engineer</div>
+        <div class="location">Seattle, Washington</div>
     </h4>
     <h3>Amazon</h3>
     <h4>
         <div class="years">September 2014 - July 2019</div>
         <div class="title">Software Development Engineer</div>
+        <div class="location">Seattle, Washington</div>
     </h4>
     <h3>Amazon Japan</h3>
     <h4>
         <div class="years">July 2012 - September 2014</div>
         <div class="title">Software Development Engineer</div>
+        <div class="location">Meguro, Tokyo</div>
     </h4>
     <h3>mixi, Inc.</h3>
     <h4>
         <div class="years">April 2008 - July 2012</div>
         <div class="title">Engineer</div>
+        <div class="location">Harajuku, Tokyo / Shibuya, Tokyo</div>
     </h4>
     <h3>National Institute of Advanced Industrial Science and Technology</h3>
     <h4>
         <div class="years">October 2008 - March 2008</div>
         <div class="title">Technical Staff (Part-Time)</div>
+        <div class="location">Akihabara, Tokyo</div>
     </h4>
     <h3>Community Engine Inc</h3>
     <h4>
         <div class="years">April 2006 - December 2007</div>
         <div class="title">Development Engineer (Part-Time)</div>
+        <div class="location">Hatsudai, Tokyo</div>
     </h4>
 
     <h2>FAQ</h2>
