--- a/v4/me/index.html
+++ b/v4/me/index.html
@@ -29,8 +29,14 @@
             margin: 0 auto;
         }
         table.name th, table.name td {
-            border: 1px solid #666;
+            border: 1px solid #999;
             text-align: center;
+        }
+        table.name th {
+            font-weight: normal;
+        }
+        table.name td {
+            font-size: 200%;
         }
 
         h4 {
