--- a/v4/index.html
+++ b/v4/index.html
@@ -10,6 +10,13 @@
             line-height: 1.5;
         }
 
+        a {
+            color: #00c;
+        }
+        a:visited {
+            color: #c0c;
+        }
+
         main {
             max-width: 40rem;
             margin: 0 auto;
@@ -51,6 +58,16 @@
         <p>
             <div class="youtube">
                 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/yTCXGAeLGHw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </p>
+        <p>
+            <div class="youtube">
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/y8OnoxKotPQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </p>
+        <p>
+            <div class="youtube">
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/tk4_SMI0jVc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </p>
     </main>
