--- a/v4/me/index.html
+++ b/v4/me/index.html
@@ -70,23 +70,27 @@
         <div class="title">Senior Software Development Engineer</div>
         <div class="location">Seattle, Washington</div>
     </h4>
+    <p>containerd and firecracker-containerd still.</p>
     <h4>
         <div class="years">July 2019 - September 2021</div>
         <div class="title">Software Development Engineer</div>
         <div class="location">Seattle, Washington</div>
     </h4>
+    <p>containerd and firecracker-containerd.</p>
     <h3>Amazon</h3>
     <h4>
         <div class="years">September 2014 - July 2019</div>
         <div class="title">Software Development Engineer</div>
         <div class="location">Seattle, Washington</div>
     </h4>
+    <p>Consumer for 3 years. Alexa for 2 years.</p>
     <h3>Amazon Japan</h3>
     <h4>
         <div class="years">July 2012 - September 2014</div>
         <div class="title">Software Development Engineer</div>
         <div class="location">Meguro, Tokyo</div>
     </h4>
+    <p>From i-mode to iPhone and Android.</p>
     <h3>mixi, Inc.</h3>
     <h4>
         <div class="years">April 2008 - July 2012</div>
