--- a/v4/me/index.html
+++ b/v4/me/index.html
@@ -90,7 +90,11 @@
         <div class="title">Software Development Engineer</div>
         <div class="location">Meguro, Tokyo</div>
     </h4>
-    <p>From i-mode to iPhone and Android.</p>
+    <p>
+        At that time, Amazon's mobile web experience was mostly owned by a small team in Tokyo.
+        I was in the team and helped the modernization project of Product Detail Page.
+    </p>
+
     <h3>mixi, Inc.</h3>
     <h4>
         <div class="years">April 2008 - July 2012</div>
@@ -103,12 +107,19 @@
         <div class="title">Technical Staff (Part-Time)</div>
         <div class="location">Akihabara, Tokyo</div>
     </h4>
+    <p>I was in <a href="http://wedata.net">wedata</a> team.</p>
+
     <h3>Community Engine Inc</h3>
     <h4>
         <div class="years">April 2006 - December 2007</div>
         <div class="title">Development Engineer (Part-Time)</div>
         <div class="location">Hatsudai, Tokyo</div>
     </h4>
+    <p>
+        Community Engine was Square Enix's subsidary,
+        which was primarily developing network middleware for games.
+    </p>
+    <p>I prototyped the middleware's ActionScript 3 port, including its code generator.</p>
 
     <h2>FAQ</h2>
     <h3 id="kazu">Kazu? Kaz? Kato?</h3>
