What the Japanese government said

--- a/v4/me/index.html
+++ b/v4/me/index.html
@@ -192,8 +192,9 @@
         the <em>given name, family name</em> order, especially since I live in the States.
     </p>
     <p>
-        However the Japanese government is starting to use
-        the <em>family name, given name</em> order even in English.
+        However, <a href="https://www.reuters.com/article/us-japan-names/family-comes-first-japan-to-switch-order-of-names-in-victory-for-tradition-idUSKCN1VR1LE"
+        >the Japanese government is starting to use
+        the <em>family name, given name</em> order even in English</a>.
         What's a mess...
     </p>
 </body>
