--- a/v4/me/index.html
+++ b/v4/me/index.html
@@ -71,12 +71,14 @@
         <div class="location">Seattle, Washington</div>
     </h4>
     <p>containerd and firecracker-containerd still.</p>
+
     <h4>
         <div class="years">July 2019 - September 2021</div>
         <div class="title">Software Development Engineer</div>
         <div class="location">Seattle, Washington</div>
     </h4>
     <p>containerd and firecracker-containerd.</p>
+
     <h3>Amazon</h3>
     <h4>
         <div class="years">September 2014 - July 2019</div>
@@ -101,13 +103,17 @@
         <div class="title">Engineer</div>
         <div class="location">Harajuku, Tokyo / Shibuya, Tokyo</div>
     </h4>
+    <p>
+        I was in Platform team and developed mixi Platform,
+        <a href="https://en.wikipedia.org/wiki/OpenSocial">OpenSocial</a>-based social application platform.
+    </p>
     <h3>National Institute of Advanced Industrial Science and Technology</h3>
     <h4>
         <div class="years">October 2008 - March 2008</div>
         <div class="title">Technical Staff (Part-Time)</div>
         <div class="location">Akihabara, Tokyo</div>
     </h4>
-    <p>I was in <a href="http://wedata.net">wedata</a> team.</p>
+    <p>I was in <a href="http://wedata.net">wedata</a> project.</p>
 
     <h3>Community Engine Inc</h3>
     <h4>
@@ -118,8 +124,8 @@
     <p>
         Community Engine was Square Enix's subsidary,
         which was primarily developing network middleware for games.
+        I prototyped the middleware's ActionScript 3 port, including its code generator.
     </p>
-    <p>I prototyped the middleware's ActionScript 3 port, including its code generator.</p>
 
     <h2>FAQ</h2>
     <h3 id="kazu">Kazu? Kaz? Kato?</h3>
