--- a/v4/index.html
+++ b/v4/index.html
@@ -45,10 +45,15 @@
             I have a <a href="https://blog.8-p.info/">blog</a> and
             <a href="https://thoughts.8-p.info/">some notes</a>.
         </p>
-        <h2>From the Internet</h2>
+        <h2>No web3</h2>
         <p>
-            <a href="https://concerned.tech">Letter in Support of Responsible Fintech Policy</a>
+            I'm still skeptical about blockchain technology.
+            Please read
+            <a href="https://concerned.tech">Letter in Support of Responsible Fintech Policy</a> (I signed)
+            and/or watch <a href="https://www.youtube.com/watch?v=YQ_xWvX1n9g">Line Goes Up</a>
+            if you haven't.
         </p>
+        <h2>From the Internet</h2>
         <p>
             <a href="https://maketime.blog/article/the-distraction-free-iphone/">The Distraction-Free iPhone</a>
         </p>
@@ -58,11 +63,6 @@
         <p>
             <div class="youtube">
                 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/yTCXGAeLGHw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </p>
-        <p>
-            <div class="youtube">
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/YQ_xWvX1n9g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </p>
         <p>
