Use Markdown on index.html

--- a/v4/index.html
+++ b/v4/index.html
@@ -75,11 +75,7 @@
 	    <li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">A Complete Guide to Flexbox </a></li>
 	  </ul>
 
-	  <h3>Podcast</h3>
-	  <ul>
-	    <li><a href="https://www.npr.org/podcasts/510289/planet-money/">Planet Money</a> - About economics.</li>
-	    <li><a href="https://corecursive.com/">CoRecursive</a> - A good well-edited tech interview podcast.</li>
-	  </ul>
+	  {{ include "links.md" }}
 
 	  <h3>xkcd</h3>
 	  <ul>
