--- a/v4/index.html
+++ b/v4/index.html
@@ -1,40 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>8-p.info</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            line-height: 1.8;
-        }
-
-        a {
-            color: #00c;
-        }
-        a:visited {
-            color: #c0c;
-        }
-
-	main {
-	    margin: 1rem;
-	    padding: 0;
-	}
-
-	@media (min-width: 80em) {
-            main {
-		display: flex;
-            }
-	}
-
-	.column {
-	    flex-basis: 50%;
-	}
-    </style>
-</head>
-<body>
-    <main>
+    <main class="flex">
 		<div class="column">
 			<h1>8-p.info</h1>
 			<p>
@@ -59,5 +23,3 @@
     <footer>
       hello
     </footer>
-</body>
-</html>
