--- a/v4/me/index.html
+++ b/v4/me/index.html
@@ -1,63 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Kazuyoshi Kato</title>
-    <style>
-        body {
-            margin: 0 auto;
-            padding: 1rem;
-            max-width: 50rem;
-            font-family: "Helvetica Neue", sans-serif;
-        }
-
-        .family {
-            color: #900;
-        }
-
-        .given {
-            color: #090;
-        }
-
-        p {
-            line-height: 1.5;
-        }
-
-        table.name {
-            border-collapse: collapse;
-            margin: 0 auto;
-        }
-        table.name th, table.name td {
-            border: 1px solid #999;
-            text-align: center;
-        }
-        table.name th {
-            font-weight: normal;
-        }
-        table.name td {
-            font-size: 200%;
-        }
-
-        h4 {
-            font-weight: normal;
-        }
-
-        @media (min-width: 50rem) {
-            h4 {
-                display: flex;
-            }
-            h4 .years {
-                width: 33.3%;
-            }
-            h4 .title {
-                flex-grow: 2;
-            }
-        }
-</style>
-</head>
-<body>
-    <h1>Kazuyoshi Kato</h1>
+---
+title: Kazuyoshi Kato
+---
+<main class="narrow">
+  <h1>Kazuyoshi Kato</h1>
     <p>
         Hello. My name is Kazuyoshi Kato.
         I'm a Japanese software developer, living in Seattle, Washington.
@@ -203,5 +148,4 @@
         the <em>family name, given name</em> order even in English</a>.
         What's a mess...
     </p>
-</body>
-</html>
+</main>
