--- a/v4/index.html
+++ b/v4/index.html
@@ -1,25 +1,25 @@
-    <main class="flex">
-		<div class="column">
-			<h1>8-p.info</h1>
-			<p>
-				My name is <a href="/me/">Kazuyoshi Kato</a>.
-				I have a <a href="https://blog.8-p.info/">blog</a> and
-				<a href="https://thoughts.8-p.info/">some notes</a>.
-			</p>
-		<h2>Projects</h2>
-		<p>To be updated, hopefully soon.</p>
-
-			<h2>No web3</h2>
-			<p>
-				I'm still skeptical about blockchain technology.
-				Please read
-				<a href="https://concerned.tech">Letter in Support of Responsible Fintech Policy</a> (I signed)
-				and/or watch <a href="https://www.youtube.com/watch?v=YQ_xWvX1n9g">Line Goes Up</a>
-				if you haven't.
-			</p>
-		</div>
-		<div class="column">{{ include "links.md" }}</div>
-    </main>
-    <footer>
-      hello
-    </footer>
+---
+title: 8-p.info
+---
+<main class="flex">
+  <div class="column">
+    <h1>8-p.info</h1>
+    <p>
+      My name is <a href="/me/">Kazuyoshi Kato</a>.
+      I have a <a href="https://blog.8-p.info/">blog</a> and
+      <a href="https://thoughts.8-p.info/">some notes</a>.
+    </p>
+    <h2>Projects</h2>
+    <p>To be updated, hopefully soon.</p>
+    
+    <h2>No web3</h2>
+    <p>
+      I'm still skeptical about blockchain technology.
+      Please read
+      <a href="https://concerned.tech">Letter in Support of Responsible Fintech Policy</a> (I signed)
+      and/or watch <a href="https://www.youtube.com/watch?v=YQ_xWvX1n9g">Line Goes Up</a>
+      if you haven't.
+    </p>
+  </div>
+  <div class="column">{{ include "links.md" }}</div>
+</main>
