Hide blog.8-p.info and thoughts.8-p.info

--- a/v4/index.html
+++ b/v4/index.html
@@ -6,11 +6,8 @@ title: 8-p.info
     <h1>8-p.info</h1>
     <p>
       My name is <a href="/me/">Kazuyoshi Kato</a>.
-      I have a <a href="https://blog.8-p.info/">blog</a> and
-      <a href="https://thoughts.8-p.info/">some notes</a>.
+      I'm a software developer in Seattle.
     </p>
-    <h2>Projects</h2>
-    <p>To be updated, hopefully soon.</p>
     
     <h2>No web3</h2>
     <p>
