--- a/v4/index.html
+++ b/v4/index.html
@@ -8,10 +8,14 @@ title: 8-p.info
       My name is <a href="/me/">Kazuyoshi Kato</a>.
       I'm a software developer in Seattle.
     </p>
-    
+
     <h2>No web3</h2>
     <p>
-      I'm still skeptical about blockchain technology.
+      I'm still skeptical about blockchain.
+      Blockchain has been a solution looking for a problem and
+      "building the next web" wouldn't be the problem it could solve.
+    </p>
+    <p>
       Please read
       <a href="https://concerned.tech">Letter in Support of Responsible Fintech Policy</a> (I signed)
       and/or watch <a href="https://www.youtube.com/watch?v=YQ_xWvX1n9g">Line Goes Up</a>
