Add Svelte again

--- a/v4/index.html
+++ b/v4/index.html
@@ -9,6 +9,9 @@ title: 8-p.info
       I'm a software developer in Seattle.
     </p>
 
+    <h2>Projects</h2>
+    <a href="/maze/"><div id="maze"></div></a>
+
     <h2>No web3</h2>
     <p>
       I'm still skeptical about blockchain.
