Make the maze generator's thumbnail smaller

--- a/v4/index.html
+++ b/v4/index.html
@@ -10,7 +10,11 @@ title: 8-p.info
     </p>
 
     <h2>Projects</h2>
-    <a href="/maze/"><div id="maze"></div></a>
+    <h3><a href="/maze/">Random Maze Generator</a></h3>
+    <div class="maze thumbnail"></div>
+    <p>
+      A simple client-side maze generator for kids.
+    </p>
 
     <h2>No web3</h2>
     <p>
