--- a/v4/maze/index.html
+++ b/v4/maze/index.html
@@ -1,5 +1,7 @@
+---
+title: Random Maze Generator
+---
 <main>
-    <h1>Maze</h1>
-    <div id="maze" data-showControl="true"></div>
+    <h1>Random Maze Generator</h1>
+    <div class="maze" data-showControl="true"></div>
 </main>
-
