Add blogs again

--- a/v4/index.html
+++ b/v4/index.html
@@ -8,6 +8,8 @@ title: 8-p.info
     <p>
       My name is <a href="/me/">Kazuyoshi Kato</a>.
       I'm a software developer in Seattle.
+      I have [blogs](https://blog.8-p.info/), [some notes](https://thoughts.8-p.info/) and
+      even [Now page](https://8-p.info/now/). I may need to clean up them.
     </p>
     <div class="svelte" data-c="clock" data-timezone="America/Los_Angeles">
     </div>
