--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -11,7 +11,7 @@ title: 8-p.info
       <p>
 	{{ include "hello_en.md" }}
       </p>
-      <div class="svelte" data-c="clock" data-timezone="America/Los_Angeles">
+      <div data-svelte="clock" data-timezone="America/Los_Angeles">
       </div>
 
       <h2>Projects</h2>
