--- a/v4/src/maze/index.html
+++ b/v4/src/maze/index.html
@@ -3,5 +3,5 @@ title: Random Maze Generator
 ---
 <main>
     <h1>Random Maze Generator</h1>
-    <div class="maze" data-showControl="true"></div>
+    <div data-svelte="maze" data-showcontrol="true"></div>
 </main>
