--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -14,6 +14,9 @@ title: 8-p.info
       <div data-svelte="clock" data-timezone="America/Los_Angeles">
       </div>
 
+      <h2>Writings</h2>
+      <h3><a href="/framework/">Framework Laptop</a></h3>
+
       <h2>Projects</h2>
       <h3><a href="/maze/">Random Maze Generator</a></h3>
       <div class="svelte thumbnail" data-c="maze"></div>
