--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -14,15 +14,13 @@ title: 8-p.info
       <div data-svelte="clock" data-timezone="America/Los_Angeles">
       </div>
 
-      <h2>Writings</h2>
-      <h3><a href="/framework/">Framework Laptop</a></h3>
-
       <h2>Projects</h2>
       <h3><a href="/maze/">Random Maze Generator</a></h3>
-      <div class="svelte thumbnail" data-c="maze"></div>
-      <p>
-	A simple client-side maze generator for kids.
-      </p>
+      <p>My kid like mazes. So I made a simple maze generator for them.</p>
+
+      <h2>Notes</h2>
+      <h3><a href="/framework/">Framework Laptop</a></h3>
+      <p>Framework Laptop is my daliy driver. It is a good Linux laptop.</p>
     </div>
     <div class="column">{{ include "links.md" }}</div>
   </section>
