--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -18,7 +18,11 @@ title: 8-p.info
       <h3><a href="/maze/">Random Maze Generator</a></h3>
       <p>My kid like mazes. So I made a simple maze generator for them.</p>
 
-      <h2>Notes</h2>
+      <h2>Writings</h2>
+      <p>
+	I used to <a href="https://blog.8-p.info/">blog relatively actively</a>,
+	but now I'm focusing more on this website to write something I'd maintain for a while.
+      </p>
       <h3><a href="/framework/">Framework Laptop</a></h3>
       <p>Framework Laptop is my daliy driver. It is a good Linux laptop.</p>
     </div>
