Less about myself

--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -8,12 +8,6 @@ title: 8-p.info
   </header>
   <section id="english">
     <div class="column">
-      <p>
-	{{ include "hello_en.md" }}
-      </p>
-      <div data-svelte="clock" data-timezone="America/Los_Angeles">
-      </div>
-
       <h2>Projects</h2>
       <h3><a href="/maze/">Random Maze Generator</a></h3>
       <p>My kid like mazes. So I made a simple maze generator for them.</p>
@@ -32,7 +26,14 @@ title: 8-p.info
   <section id="ja">
     <div class="column">
       <h2>日本語</h2>
-      {{ include "hello_ja.md" }}
+      日本語で書いたものをここに足していく予定。
     </div>
   </section>
+
+  <footer>
+      <p>
+	8-p.info is owned by <a href="/me/">Kazuyoshi Kato</a>.
+	A Japanese software developer in Seattle, Washington.
+      </p>
+  </footer>
 </main>
