Add /en/ and /ja/

--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -17,7 +17,7 @@ title: 8-p.info
 	I used to <a href="https://blog.8-p.info/">blog relatively actively</a>,
 	but now I'm focusing more on this website to write something I'd maintain for a while.
       </p>
-      <h3><a href="/framework/">Framework Laptop</a></h3>
+      <h3><a href="/en/framework/">Framework Laptop</a></h3>
       <p>Framework Laptop is my daliy driver. It is a good Linux laptop.</p>
     </div>
     <div class="column">{{ include "links_en.md" }}</div>
