--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -20,7 +20,7 @@ title: 8-p.info
       <h3><a href="/en/framework/">Framework Laptop</a></h3>
       <p>Framework Laptop is my daliy driver. It is a good Linux laptop.</p>
     </div>
-    <div class="column">{{ include "links_en.md" }}</div>
+    <div class="column">{{ include "en/links.md" }}</div>
   </section>
 
   <section id="ja">
@@ -28,7 +28,7 @@ title: 8-p.info
       <h2>日本語</h2>
       日本語で書いたものをここに足していく予定。
     </div>
-    <div class="column">{{ include "links_ja.md" }}</div>
+    <div class="column">{{ include "ja/links.md" }}</div>
   </section>
 
   <footer>
