--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -9,8 +9,11 @@ title: 8-p.info
   <section id="english">
     <div class="column">
       <h2>Projects</h2>
+      <h3><a href="/en/containerd/">containerd</a></h3>
+      <p>containerd is a container runtime. I'm one of the maintainers.</p>
+
       <h3><a href="/maze/">Random Maze Generator</a></h3>
-      <p>My kid like mazes. So I made a simple maze generator for them.</p>
+      <p>A simple maze generator for my kids.</p>
 
       <h2>Writings</h2>
       <p>
