Amazon Builders' Library

--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -21,7 +21,13 @@ title: 8-p.info
 	but now I'm focusing more on this website to write something I'd maintain for a while.
       </p>
       <h3><a href="/en/framework/">Framework Laptop</a></h3>
-      <p>Framework Laptop is my daliy driver. It is a good Linux laptop.</p>
+      <p>
+	Framework Laptop is my daliy driver. It is a good Linux laptop.
+      </p>
+      <h3><a href="/en/amazon/builders-library.html">Amazon Builders' Library is good</a></h3>
+      <p>
+	Some excerpts from the good library.
+      </p>
     </div>
     <div class="column">{{ include "en/links.md" }}</div>
   </section>
