--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -10,14 +10,18 @@ title: 8-p.info
     <div class="column">
       <h2>Projects</h2>
       <h3><a href="/en/containerd/">containerd</a></h3>
-      <p>containerd is a container runtime. I'm one of the maintainers.</p>
+      <p>
+	containerd is a container runtime, originally developed by Docker, Inc.
+	and later donated to the Cloud Native Computing Foundation.
+	I joined the maintainer team in 2021 and worked on various areas since then.
+      </p>
 
       <h3><a href="/maze/">Random Maze Generator</a></h3>
       <p>A simple maze generator for my kids.</p>
 
       <h2>Writings</h2>
       <p>
-	I used to <a href="https://blog.8-p.info/">blog relatively actively</a>,
+	I used to <a href="https://blog.8-p.info/">blog actively</a>,
 	but now I'm focusing more on this website to write something I'd maintain for a while.
       </p>
       <h3><a href="/en/framework/">Framework Laptop</a></h3>
@@ -26,7 +30,7 @@ title: 8-p.info
       </p>
       <h3><a href="/en/amazon/builders-library.html">Amazon Builders' Library is good</a></h3>
       <p>
-	Some excerpts from the good library.
+	The Amazon Builders' Library is good, but not well-read outside of Amazon.
       </p>
     </div>
     <div class="column">{{ include "en/links.md" }}</div>
