Add c10k.html on /

--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -38,8 +38,7 @@ title: 8-p.info
 
   <section id="ja">
     <div class="column">
-      <h2>日本語</h2>
-      日本語で書いたものをここに足していく予定。
+      {{ include "ja/index.md" }}
     </div>
     <div class="column">{{ include "ja/links.md" }}</div>
   </section>
