--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -19,7 +19,7 @@ title: 8-p.info
       <h3><a href="/maze/">Random Maze Generator</a></h3>
       <p>A simple maze generator for my kids.</p>
 
-      <h2>Writings</h2>
+      <h2>Notes</h2>
       <p>
 	I used to <a href="https://blog.8-p.info/">blog actively</a>,
 	but now I'm focusing more on this website to write something I'd maintain for a while.
