--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -32,6 +32,11 @@ title: 8-p.info
       <p>
 	The Amazon Builders' Library is good, but not well-read outside of Amazon.
       </p>
+
+      <h2>Things to write</h2>
+      <ul>
+	<li>???</li>
+      </ul>
     </div>
     <div class="column">{{ include "en/links.md" }}</div>
   </section>
