Add /go/ and /amazon/

--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -11,9 +11,7 @@ title: 8-p.info
       <h2>Projects</h2>
       <h3><a href="/en/containerd/">containerd</a></h3>
       <p>
-	containerd is a container runtime, originally developed by Docker, Inc.
-	and later donated to the Cloud Native Computing Foundation.
-	I joined the maintainer team in 2021 and worked on various areas since then.
+	I have been a containerd reviewer since 2021 and become a committer in 2022.
       </p>
 
       <h3><a href="/maze/">Random Maze Generator</a></h3>
@@ -28,9 +26,13 @@ title: 8-p.info
       <p>
 	Framework Laptop is my daliy driver. It is a good Linux laptop.
       </p>
-      <h3><a href="/en/amazon/builders-library.html">Amazon Builders' Library is good</a></h3>
+      <h3><a href="/en/go/">Go</a></h3>
       <p>
-	The Amazon Builders' Library is good, but not well-read outside of Amazon.
+	Go is my primary language from 2021.
+      </p>
+      <h3><a href="/en/amazon/">Amazon</a></h3>
+      <p>
+	I worked for Amazon from 2012 to 2023.
       </p>
 
       <h2>Things to write</h2>
