Call them customers

--- a/v4/src/index.html
+++ b/v4/src/index.html
@@ -6,6 +6,15 @@ title: 8-p.info
     <h1>8-p.info</h1>
     <a href="#ja">日本語は下にあります / Japanese below</a>
   </header>
+  <blockquote>
+    <p>
+      And so there is this incredible remark which a guy from Wired told me,
+      that there are only two industries which refer to their customers as users, drugs and computers.
+    </p>
+    <p>
+      <a href="https://web.archive.org/web/19981202112359/https://www.clbooks.com/nbb/tufte.html">Edward Tufte</a>
+    </p>
+  </blockquote>
   <section id="english">
     <div class="column">
       <h2>Projects</h2>
